fix code overflow

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,9 @@
 @tailwind base;
+
+pre {
+  text-wrap: wrap;
+}
+
 @tailwind components;
 @tailwind utilities;
 
